fixed jumbo image align

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -200,6 +200,7 @@ footer {
   .res-map {
     display: block;
   }
+
   .res-div {
     width: 100%;
     border-style: none;
@@ -216,6 +217,21 @@ footer {
     opacity: 0.3;
     height: 2px;
     background-color: #fff;
+  }
+
+  .main-image-wrapper {
+    background-image: url(/images/JumboImage_res.jpg);
+    background-size: 100%;
+  }
+
+  .main-content-wrapper {
+    justify-content: flex-end;
+    height: auto;
+    height: 520px;
+  }
+
+  .text-overlay {
+    font-size: 6rem;
   }
 
   .res-login {
@@ -298,7 +314,7 @@ footer {
 
   .main-content-wrapper {
     max-width: 100%;
-    padding: 2rem;
+    padding: 2rem 2rem 4rem 2rem;
   }
 
   .text-wrapper {
